[package]
name = "stm32f103_project"
version = "0.1.0"
authors = ["PAMIE <ocafeeoelefante@proton.me>"]
edition = "2018"


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.9"
stm32f1 = { version = "0.14", features = ["stm32f103"] }
panic-halt = "0.2"

[profile.release]
panic = "abort"